2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: improve docbook, JNLP and GEDCOM description.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: don't mark <acronym/> and
	<expanded-acronym/> for translation.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/mathematica" subclass of
	"text/plain". Thanks to Shaun McCance. Fixes #4345.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: fix corel draw magic string, add aliases.
	Thanks to Stewart Jeacocke. Fixes #3136.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* update-mime-database.c: (process_freedesktop_node):
	process <acronym/> and <expanded-acronym/>.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "GNUmakefile" pattern to
	"text/x-makefile". Fixes #4334.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment to "application/x-sc", by J.H.M.
	Dassen. Fixes #3146.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: register "application/x-mathematica" as
	alias for "application/mathematica". Fixes #4403.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add <acronym/> and <expanded-acronym/> tags.
	Use shorter text for many <comment/> tags.

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add m4v as a possible extension for video
	MPEG4, and add video/x-m4v as an alias for video/mp4

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add text/gedcom as an alias for
	application/x-gedcom

2005-05-31  Antonio Xu <antonio.xu@sun.com>

	Reviewed by: Bastien Nocera <hadess@hadess.net>
 
	* freedesktop.org.xml.in: add one more pattern "Return-path" for
	message/rfc822

2005-09-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: add audio/mpegurl as an alias to