@@ -1,5 +1,10 @@
 2005-10-29  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add "application/x-sqlite" MIME type. Thanks
+	to Jarosław Staniek. Fixes #3178.
+
+2005-10-29  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: improve docbook, JNLP and GEDCOM description.
 
 2005-10-29  Christian Neumair  <chris@gnome-de.org>
